# practice

./: .clang-format  1001.grid-illumination.cpp  1292.maximum-side-length-of-a-square-with-sum-less-than-or-equal-to-threshold.cpp  133.克隆图.cpp  143.重排链表.cpp  1455.check-if-a-word-occurs-as-a-prefix-of-any-word-in-a-sentence.cpp  1793.maximum-score-of-a-good-subarray.cpp  1976.number-of-ways-to-arrive-at-destination.cpp  1996.the-number-of-weak-characters-in-the-game.cpp  331.verify-preorder-serialization-of-a-binary-tree.cpp  413.等差数列划分.cpp  581.shortest-unsorted-continuous-subarray.cpp  762.prime-number-of-set-bits-in-binary-representation.cpp  788.rotated-digits.cpp  975.奇偶跳.cpp  CMakeLists.txt  README.md
cmake/: ProjectGoogleTest.cmake
codeforces/2030C/: input.txt  main.cpp  test.sh
codeforces/solution/: 2032B.cpp
inc/: helper.h
inc/helper/: add.h  version.h
inc/helper/cpp17/: add.h
inc/helper/cpp20/: add.h
leetcode/: 1292.maximum-side-length-of-a-square-with-sum-less-than-or-equal-to-threshold.cpp  1345.jump-game-iv.cpp  1496.path-crossing.cpp  223.矩形面积.cpp  301.remove-invalid-parentheses.cpp  3350.检测相邻递增子数组-ii.cpp  447.number-of-boomerangs.cpp  82.remove-duplicates-from-sorted-list-ii.cpp  902.numbers-at-most-n-given-digit-set.cpp
scripts/: get_build_time.py
src/: helper.cpp  main.cpp
test/: benchmark_test_helper.cpp  gtest_test_helper.cpp
